--- a/src/pages/game/ssGame/SSGame.css
+++ b/src/pages/game/ssGame/SSGame.css
@@ -1,7 +1,22 @@
-#header-banner {
+#SSGameHeader {
     height: 14.22vh;
 }
 
-#body-window {
+#SSGameBody {
     height: 85.78vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.SSGameBodyProgressBar {
+    height: 10%;
+}
+
+.SSGameWindow {
+    height: 60%;
+}
+.SSGameEnterButton {
+    height: 20%;
 }
