--- a/src/components/appHeader/AppHeader.css
+++ b/src/components/appHeader/AppHeader.css
@@ -11,3 +11,38 @@
     font-size: 6vmin;
     font-weight: 600;
 }
+
+.flexHomeBtn {
+    position: absolute;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: space-around;
+    right: 10px;
+    height: 58.5px;
+    top: 1vh;
+}
+
+.homePic {
+    border-radius: 50%;
+    border: 0px;
+    background-color:rgba(255,255,255,0.1);
+    border: 1px solid rgba(255,255,255,0.4);
+    width: 42px;
+    height: 42px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.bi::before {
+    font-size: 18px;
+}
+
+.textInHome {
+    font-family: 'Sarabun';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    color: white;
+}
