--- a/src/components/gameCards/GameCards.css
+++ b/src/components/gameCards/GameCards.css
@@ -1,14 +1,19 @@
 .cardBox {
-    height: 120px;
-    width: 50%;
+    height: 14.22vh;
+    width: calc(var(--this-sum) / 6.82);
     cursor: pointer;
     overflow: unset;
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.65);
-    border-radius: 20px;
-    border: 0px;
+    box-shadow: 
+        0 
+        calc(var(--this-sum) / 154.25) 
+        calc(var(--this-sum) / 77.125)
+        0 
+        rgba(0, 0, 0, 0.65);
+    border-radius: calc(var(--this-sum) / 61.7);
+    border: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,11 +21,14 @@
 }
 
 .headerCategory {
-    padding: 0 12px;
-    margin: 20px 0 10px;
-    font-size: 22px;
+    padding: calc(var(--this-sum) / 88.14);
+    font-size: calc(var(--this-sum) / 56.09);
 }
 
 .gameImage {
-    width: 56px;
+    width: calc(var(--this-sum) / 22.04);
+}
+
+.gameName {
+    font-size: calc(var(--this-sum) / 77.125);
 }
