--- a/src/components/loadingSpinner/LoadingSpinner.scss
+++ b/src/components/loadingSpinner/LoadingSpinner.scss
@@ -1,5 +1,5 @@
 :root {
-    --cir-size: calc((var(--this-width) + var(--this-height)) / 10.2833333);
+    --cir-size: calc((var(--this-width) + var(--this-height)) / 10.28);
     --control-size-16px: calc((var(--this-width) + var(--this-height)) / 77.125);
 }
 
