--- a/src/components/rotateAlert/RotateAlert.css
+++ b/src/components/rotateAlert/RotateAlert.css
@@ -3,9 +3,14 @@
     height: 100vh;
 }
 
+.rotateImage {
+    width: calc(var(--this-sum) / 19.28);
+    height: calc(var(--this-sum) / 19.28);
+}
+
 .rotateText {
-    font-size: 16px;
-    padding-top: 12px;
+    font-size: calc(var(--this-sum) / 77.125);
+    padding-top: calc(var(--this-sum) / 102.83);
 }
 
 @media (orientation: landscape) {
