--- a/src/components/enterButtons/EnterButtons.css
+++ b/src/components/enterButtons/EnterButtons.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 16px;
+    gap: calc(var(--this-sum) / 77.125);
 }
 
 .rowBtnContainer {
@@ -13,7 +13,7 @@
     flex-direction: row;
     /* justify-content: space-between; */
     justify-content: center;
-    width: 318px;
+    width: calc(var(--this-sum) / 3.88);
 }
 
 .rowSingleBtnContainer {
@@ -26,14 +26,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 4px 8px;
-    gap: 4px;
-    width: 320px;
-    border: 1px solid rgba(0, 0, 0, 0.7);
-    border-radius: 50px;
-    font-size: 22px;
-    line-height: 34px;
-    letter-spacing: 0.18px;
+    padding: calc(var(--this-sum) / 308.5) calc(var(--this-sum) / 154.25);
+    gap: calc(var(--this-sum) / 308.5);
+    width: calc(var(--this-sum) / 3.86);
+    border: calc(var(--this-sum) / 1234) solid rgba(0, 0, 0, 0.7);
+    border-radius: calc(var(--this-sum) / 24.68);
+    font-size: calc(var(--this-sum) / 56.09);
+    line-height: calc(var(--this-sum) / 36.29);
+    letter-spacing: calc(var(--this-sum) / 6855.56);
     color: #393939;
     background-color: #ffffff;
 }
@@ -42,15 +42,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 16px 16px;
-    gap: 4px;
-    width: 320px;
+    padding: calc(var(--this-sum) / 77.125) calc(var(--this-sum) / 77.125);
+    gap: calc(var(--this-sum) / 308.5);
+    width: calc(var(--this-sum) / 3.86);
     background: #297AF4;
-    border-radius: 50px;
-    font-size: 24px;
+    border-radius: calc(var(--this-sum) / 24.68);
+    font-size: calc(var(--this-sum) / 51.42);
     font-weight: 600;
-    line-height: 34px;
-    letter-spacing: 0.18px;
+    line-height: calc(var(--this-sum) / 36.29);
+    letter-spacing: calc(var(--this-sum) / 6855.56);
     color: #FFFFFF;
     border: none;
 }
