--- a/src/components/progressBar/ProgressBar.css
+++ b/src/components/progressBar/ProgressBar.css
@@ -1,25 +1,29 @@
-.progressBarContainer {
-
-}
-
 #progressBar {
     display: block;
-    width: 300px;
-    height: 30px;
-    border: 1px solid rgba(196, 196, 196, 0.56);
-    border-radius: 10px;
-    box-shadow: 0 2px 4px 2px rgba(0, 0, 0, 0.25);
+    width: calc(var(--this-sum) / 4.11);
+    height: calc(var(--this-sum) / 41.13);
+    border: calc(var(--this-sum) / 1234) solid rgba(196, 196, 196, 0.56);
+    border-radius: calc(var(--this-sum) / 123.4);
+    box-shadow: 0 
+        calc(var(--this-sum) / 617)
+        calc(var(--this-sum) / 308.5)
+        calc(var(--this-sum) / 617)
+        rgba(0, 0, 0, 0.25);
     background: #FFFFFF;
     z-index: 1;
 }
 
 #progressBar::-webkit-progress-bar {
     background-color: rgb(255, 255, 255);
-    border-radius: 10px;
+    border-radius: calc(var(--this-sum) / 123.4);
 }
 
 #progressBar::-webkit-progress-value {
     background: #D2D2D2;
-    border-radius: 8px;
-    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.25);
+    border-radius: calc(var(--this-sum) / 154.25);
+    box-shadow: 
+        0 
+        calc(var(--this-sum) / 308.5) 
+        calc(var(--this-sum) / 246.8) 
+        rgba(0, 0, 0, 0.25);
 }
