--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,41 @@
   --this-width : 0;
   --this-height : 0;
   --this-sum : 0;
+  --this-address-bar: 0px;
 }
 
 * {
   padding: 0;
   margin: 0;
   border: box-sizing;
+}
+
+#control-height {
+  height: 100vh;
+  width: 0;
+  position: absolute;
+}
+
+@media screen and (orientation: landscape) {
+  html.portrait {
+      transform: rotate(-90deg);
+      transform-origin: left top;
+      width: calc(100vh - var(--this-address-bar));
+      height: 100vw;
+      position: fixed;
+      top: 100%;
+      left: 0;
+  }
+}
+
+@media (orientation: portrait) {
+  html.landscape {
+      transform: rotate(-90deg);
+      transform-origin: left top;
+      width: calc(100vh - var(--this-address-bar));
+      height: 100vw;
+      position: fixed;
+      top: 100%;
+      left: 0;
+  }
 }
