--- a/src/pages/game/ssGame/SSGame.css
+++ b/src/pages/game/ssGame/SSGame.css
@@ -3,7 +3,7 @@
 }
 
 #SSGameBody {
-    height: 85.78vh;
+    height: calc(100vh - (var(--address-bar-height) + 14.22vh));
     display: flex;
     flex-direction: column;
     align-items: center;
