--- a/src/pages/landingPage/LandingPage.css
+++ b/src/pages/landingPage/LandingPage.css
@@ -1,13 +1,9 @@
-.container-fluid {
-    height: calc(100vh - var(--address-bar-height));
-}
-
 #LandingPageHeader {
     height: 14.22vh;
 }
 
 #LandingPageBody {
-    height: 85.78vh;
+    height: calc(100vh - (var(--address-bar-height) + 14.22vh));
     padding: calc(var(--this-sum) / 123.4);
     padding-top: unset;
 }
