--- a/src/pages/game/ssGame/SSGame.css
+++ b/src/pages/game/ssGame/SSGame.css
@@ -1,9 +1,11 @@
 #SSGameHeader {
     height: 14.22vh;
+    height: calc(var(--vh, 1vh) * 14.22);
 }
 
 #SSGameBody {
-    height: calc(100vh - (var(--address-bar-height) + 14.22vh));
+    height: 85.78vh;
+    height: calc(var(--vh, 1vh) * 85.78);
     display: flex;
     flex-direction: column;
     align-items: center;
