--- a/src/pages/landingPage/LandingPage.css
+++ b/src/pages/landingPage/LandingPage.css
@@ -1,9 +1,11 @@
 #LandingPageHeader {
     height: 14.22vh;
+    height: calc(var(--vh, 1vh) * 14.22);
 }
 
 #LandingPageBody {
-    height: calc(100vh - (var(--address-bar-height) + 14.22vh));
+    height: 85.78vh;
+    height: calc(var(--vh, 1vh) * 85.78);
     padding: calc(var(--this-sum) / 123.4);
     padding-top: unset;
 }
