--- a/src/pages/gameInstruction/ssInstruction/SSInstruction.scss
+++ b/src/pages/gameInstruction/ssInstruction/SSInstruction.scss
@@ -288,7 +288,7 @@
 .instructionContainer {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    // align-items: flex-end;
     padding: 0;
     position: absolute;
     width: fit-content;
@@ -329,7 +329,7 @@
     flex-grow: 0;
     align-items: center;
     display: flex;
-    justify-content: center;
+    justify-content: end;
     z-index: 10;
 
     .personStart {
