revise instructionBox width

--- a/src/pages/gameInstruction/ssInstruction/SSInstruction.scss
+++ b/src/pages/gameInstruction/ssInstruction/SSInstruction.scss
@@ -313,8 +313,7 @@
     padding: calc(var(--this-sum) / 77.125);
     gap: calc(var(--this-sum) / 38.56);
     min-width: calc(var(--this-sum) / 3.74);
-    width: calc(var(--this-sum) / 1.08);
-    // width: fit-content;
+    width: calc(var(--this-width) / 3.65);
     height: fit-content;
     background: #FFFFFF;
     border-radius: calc(var(--this-sum) / 154.25);
