--- a/src/pages/gameInstruction/ssInstruction/SSInstruction.scss
+++ b/src/pages/gameInstruction/ssInstruction/SSInstruction.scss
@@ -394,12 +394,13 @@
     position: absolute;
     width: fit-content;
     height: fit-content;
-    min-width: calc((var(--this-sum) / 77.125) + (var(--this-sum) / 3.55));
-    padding: 
-        calc(var(--this-sum) / 51.42)
-        0 
-        calc(var(--this-sum) / 51.42)
-        0;
+    width: calc(var(--this-sum) / 3.55);
+    padding: calc(var(--this-sum) / 77.125);
+    // padding: 
+    //     calc(var(--this-sum) / 51.42)
+    //     0 
+    //     calc(var(--this-sum) / 51.42)
+    //     0;
     top: calc(var(--this-sum) / 10.28);
     background-color: #FFFFFF;
     border-radius: calc(var(--this-sum) / 154.25);
