--- a/src/pages/landingPage/LandingPage.css
+++ b/src/pages/landingPage/LandingPage.css
@@ -6,7 +6,11 @@
 #LandingPageBody {
     height: 85.78vh;
     height: calc(var(--vh, 1vh) * 85.78);
-    padding: calc(var(--this-sum) / 123.4);
+    padding: 
+        0
+        calc(var(--this-width) / 17.73)
+        0
+        calc(var(--this-width) / 17.73);
     padding-top: unset;
 }
 
