prevent summary showing up in landscape

--- a/src/components/scoreSummaryOverlay/ScoreSummaryOverlay.scss
+++ b/src/components/scoreSummaryOverlay/ScoreSummaryOverlay.scss
@@ -127,3 +127,10 @@
 .invisible {
     visibility: none;
 }
+
+@media (orientation: landscape) {
+
+    .summary {
+        display: none;
+    }
+}
