--- a/src/pages/gameInstruction/ssInstruction/SSInstruction.scss
+++ b/src/pages/gameInstruction/ssInstruction/SSInstruction.scss
@@ -277,6 +277,7 @@
 .tutorial {
     background: rgba(0, 0, 0, 0.65);
     position: absolute;
+    height: 100%;
     left: 0%;
     right: 0%;
     top: 0%;
