revise height in .tutorial

--- a/src/pages/gameInstruction/ssInstruction/SSInstruction.scss
+++ b/src/pages/gameInstruction/ssInstruction/SSInstruction.scss
@@ -277,7 +277,7 @@
 .tutorial {
     background: rgba(0, 0, 0, 0.65);
     position: absolute;
-    height: 100%;
+    height: calc(var(--vh, 1vh) * 100);
     left: 0%;
     right: 0%;
     top: 0%;
